--- a/jenkinsfile
+++ b/jenkinsfile
@@ -20,8 +20,19 @@ pipeline {
     }
    post {
     failure {
-        mail to: 'derrick.kisio@student.moringaschool.com',
-             subject: "FAILED: ${currentBuild.fullDisplayName}",
-             body: "Tests failed in ${env.BUILD_URL}" [5]
+       slackSend(
+            channel: 'derrick_ip1',
+            message: "FAILURE: Build ${env.BUILD_NUMBER}\nCheck the logs for more details."
+        )
+    }
+    success {
+        slackSend(
+            channel: 'derrick_ip1',
+            message: "SUCCESS: Build ${env.BUILD_NUMBER}\nDeployed to: ${RENDER_URL}"
+        )
+    }
+}
+    environment {
+        RENDER_URL = 'https://jenkins-pipeline-4nha.onrender.com'
     }
 }
