--- a/jenkinsfile
+++ b/jenkinsfile
@@ -23,18 +23,18 @@ pipeline {
         }
     }
 
-    post {
-        failure {
-            slackSend(
-                channel: 'derrick_ip1',
-                message: "FAILURE: Build ${env.BUILD_NUMBER}\nCheck the logs for more details."
-            )
-        }
-        success {
-            slackSend(
-                channel: 'derrick_ip1',
-                message: "SUCCESS: Build ${env.BUILD_NUMBER}\nDeployed to: ${RENDER_URL}"
-            )
-        }
-    }
+    // post {
+    //     failure {
+    //         slackSend(
+    //             channel: 'derrick_ip1',
+    //             message: "FAILURE: Build ${env.BUILD_NUMBER}\nCheck the logs for more details."
+    //         )
+    //     }
+    //     success {
+    //         slackSend(
+    //             channel: 'derrick_ip1',
+    //             message: "SUCCESS: Build ${env.BUILD_NUMBER}\nDeployed to: ${RENDER_URL}"
+    //         )
+    //     }
+    // }
 }
