--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,18 +1,15 @@
 pipeline {
-    agent any
-    stage('Check Node.js') {
-    steps {
-        sh 'node --version'
-        sh 'npm --version'
+    agent {
+        docker {
+            image 'node:18' 
+        }
     }
-}
     stages {
         stage('Install Dependencies') {
             steps {
                 sh 'npm install'
             }
         }
-
         stage('Deploy to Render') {
             steps {
                 sh 'node server.js'
