--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,15 +1,18 @@
 pipeline {
-    agent {
-        docker {
-            image 'node:18' 
-        }
+    agent any
+    stage('Check Node.js') {
+    steps {
+        sh 'node --version'
+        sh 'npm --version'
     }
+}
     stages {
         stage('Install Dependencies') {
             steps {
                 sh 'npm install'
             }
         }
+
         stage('Deploy to Render') {
             steps {
                 sh 'node server.js'
@@ -17,3 +20,5 @@ pipeline {
         }
     }
 }
+
+
