Test push trigger

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent any
 
     stages {
-        stage('Check Node.js') {
+        stage('Check Node.js version') {
             steps {
                 sh 'node --version'
                 sh 'npm --version'
