--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,14 +1,20 @@
 pipeline {
     agent any
-
+    tools {
+        nodejs 'Node v18.19.1' 
+    }
     stages {
-
         stage('Install Dependencies') {
             steps {
                 sh 'npm install'
             }
         }
-
+        stage('Deploy to Render') {
+            steps {
+                echo 'Deploying to Render...'
+               
+            }
+        }
         stage('Deploy to Render') {
             steps {
                 sh 'node server.js '
