updated jenkins file

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,46 +1,60 @@
 pipeline {
     agent any
+
     environment {
-        RENDER_URL = 'https://jenkins-pipeline-4nha.onrender.com'
+        RENDER_DEPLOY_HOOK = 'https://jenkins-pipeline-4nha.onrender.com/deploy-hook' // Replace if needed
     }
-    tools {
-        nodejs 'Node v18.19.1'
-    }
+
     stages {
+        stage('Setup Node') {
+            steps {
+                sh '''
+                  curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
+                  sudo apt-get install -y nodejs
+                  node -v
+                  npm -v
+                '''
+            }
+        }
+
         stage('Install Dependencies') {
             steps {
                 sh 'npm install'
             }
         }
-        stage('Deploy to Render') {
-            steps {
-                sh 'node server.js'
-            }
-        }
+
         stage('Run Tests') {
             steps {
                 sh 'npm test'
             }
         }
+
+        stage('Deploy to Render') {
+            steps {
+                sh "curl -X POST ${env.RENDER_DEPLOY_HOOK}"
+            }
+        }
+
         stage('Notify Slack') {
             steps {
                 script {
                     slackSend channel: '#derrick_ip1',
-                              message: "Build ${env.BUILD_ID} succeeded! View site here: ${env.RENDER_URL}"
+                              message: "✅ Build ${env.BUILD_ID} passed! View deployed app here: https://jenkins-pipeline-4nha.onrender.com"
                 }
             }
         }
     }
+
     post {
         success {
             mail to: 'derrickkisio@gmail.com',
-                 subject: 'Build Successful',
+                 subject: '✅ Build Successful',
                  body: 'The pipeline completed successfully.'
         }
         failure {
             mail to: 'derrickkisio@gmail.com',
-                 subject: 'Build Failed',
-                 body: 'Tests failed in the pipeline.'
+                 subject: '❌ Build Failed',
+                 body: 'The pipeline failed. Please check the Jenkins logs.'
         }
     }
 }
