updated jenkins file

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,12 +9,13 @@ pipeline {
         stage('Setup Node') {
             steps {
                 sh '''
-                  curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
-                  sudo apt-get install -y nodejs
-                  node -v
-                  npm -v
+                curl -fsSL https://deb.nodesource.com/setup_18.x | bash -
+                apt-get update
+                apt-get install -y nodejs
+                node -v
+                npm -v
                 '''
-            }
+  }
         }
 
         stage('Install Dependencies') {
