updated jenkins file

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,9 +4,11 @@ pipeline {
     environment {
         RENDER_DEPLOY_HOOK = 'https://jenkins-pipeline-4nha.onrender.com/deploy-hook'
     }
+
     tools {
-        nodejs 'Node v18.19.1'
+        nodejs 'Node v18.19.1' 
     }
+
     stages {
         stage('Install Dependencies') {
             steps {
@@ -22,7 +24,7 @@ pipeline {
 
         stage('Deploy to Render') {
             steps {
-                sh ' server.js'
+                sh 'node server.js' 
             }
         }
 
