--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,9 @@
 pipeline {
     agent any
+     options {
+        timeout(time: 10, unit: 'MINUTES')  
+        retry(3)  
+    }
 
     environment {
         RENDER_DEPLOY_HOOK = 'https://jenkins-pipeline-4nha.onrender.com/deploy-hook'
