updated jenkins file

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,11 +26,11 @@ pipeline {
             }
         }
 
-        stage('Deploy to Render') {
-            steps {
-                sh 'node server.js' 
-            }
-        }
+        // stage('Deploy to Render') {
+        //     steps {
+        //         sh 'node server.js' 
+        //     }
+        // }
 
         stage('Notify Slack') {
             steps {
