--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,18 +26,17 @@ pipeline {
             }
         }
 
-        // stage('Deploy to Render') {
-        //     steps {
-        //         sh 'node server.js' 
-        //     }
-        // }
+        stage('Deploy to Render') {
+            steps {
+                sh 'node server.js' 
+            }
+        }
 
         stage('Notify Slack') {
             steps {
                 script {
                     slackSend channel: '#derrick_ip1',
-                              message: "✅ Build ${env.BUILD_ID} passed! View deployed app here: https://jenkins-pipeline-4nha.onrender.com",
-                              baseUrl:"https://hooks.slack.com/services/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"
+                              message: "✅ Build ${env.BUILD_ID} passed! View deployed app here: https://jenkins-pipeline-4nha.onrender.com"
                 }
             }
         }
